🔄 Run the library and agent on Java 8
The tool analysed Java 8 bytecode but could not run where that bytecode
runs - which is exactly where the flight recorder is most wanted, on
legacy production JVMs. ASM was never the obstacle (its classes are
major 49); ours were. Core now compiles at --release 8: pattern-matching
instanceof unrolled at 18 sites, 16 Java 9+ API calls replaced with
Java 8 forms, and the annotations fold back into main since the whole
module is at their level now - the separate source set existed only
because main was 17.

The Gradle and Maven plugins deliberately stay at 17: they run inside
modern build JVMs, and holding build integrations to a 2014 language
level would tax every future change for no one's benefit. The docs now
state the split.

Proof is the Docker matrix: the 8 and 11 legs compile a probe with the
era's real javac and run the full checker on that same JVM, green on
1.8.0_502 and 11.0.32. Every jar class is major 52, beside ASM's own
major-49 classes in the agent jar.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>